# beam-large-records

./: README.md  beam-large-records.cabal  cabal.project
.github/workflows/: haskell-ci.yml
src/: BeamLR.hs  BeamLR2.hs  BeamLR3.hs  BeamSOP.hs
src/Data/Record/: Beam.hs
src/Data/Record/Beam/: Constraints.hs  DbSettings.hs  FromBackendRow.hs  Insert.hs  Internal.hs  Interpretation.hs  Lenses.hs  Skeleton.hs  ZipDatabase.hs  ZipFields.hs  ZipTables.hs
src/Data/Record/Generic/: Beam.hs
src/Data/Records/Generic/: Beam.hs
test/: TestBeamLargeRecords.hs
test/Test/Record/Beam/: Andres.hs  Example1.hs  Example2.hs  SQLite.hs  SimpleSQL.hs  Tutorial1.hs  Tutorial2.hs  Tutorial3.hs  Zipping.hs
