cabal-version:      2.4
name:               beam-large-records
version:            0.1.0.0
author:             Andres Loeh
maintainer:         andres@well-typed.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Records.Generic.Beam
    build-depends:    base >= 4.13,
                      beam-core,
                      large-records
    hs-source-dirs:   src
    default-language: Haskell2010
