cabal-version:      2.4
name:               beam-large-records
version:            0.1.0.0
author:             Andres Loeh
maintainer:         andres@well-typed.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Data.Record.Beam
        -- Exposed for the sake of the tests
        Data.Record.Beam.Internal
    other-modules:
        Data.Record.Beam.Constraints
        Data.Record.Beam.DbSettings
        Data.Record.Beam.FromBackendRow
        Data.Record.Beam.Interpretation
        Data.Record.Beam.Skeleton
        Data.Record.Beam.ZipFields
        Data.Record.Beam.ZipTables
    build-depends:
        base >= 4.13
      , beam-core
      , large-records
      , microlens
      , text
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    ghc-options:
        -Wall
        -Wredundant-constraints

test-suite test-beam-large-records
    type:
        exitcode-stdio-1.0
    main-is:
        TestBeamLargeRecords.hs
    other-modules:
        Test.Record.Beam.Example1
        Test.Record.Beam.Example2
        Test.Record.Beam.SQLite
        Test.Record.Beam.Util.Orphans
    build-depends:
        base
      , beam-core
      , beam-large-records
      , beam-sqlite
      , large-records
      , record-hasfield
      , sqlite-simple
      , tasty
      , tasty-hunit
      , text
    build-tool-depends:
        record-dot-preprocessor:record-dot-preprocessor
    hs-source-dirs:
        test
    default-language:
        Haskell2010
    other-extensions:
        TemplateHaskell
    ghc-options:
        -Wall